--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,6 +1,7 @@
 .cover__background{
     background-image: url("../../../images/cover-trains.jpg");
     background-size:cover;
+    background-position: center;
     max-width: 1184px;
     height:740px;
     margin:auto;
@@ -8,13 +9,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* transition: opacity 0.8s; */
     position: relative;
 }
-/* .cover__background:hover{
-    opacity: 0.7;
-} */
-.cover__background:hover:after{
+.cover__background:after{
     content: '';
     position: absolute;
     top: 0;
@@ -23,6 +20,10 @@
     bottom: 0;
     background: rgba(0,0,0,.5);
     z-index: 2;
+    opacity: 0.3;
+}
+.cover__background:hover:after{
+   opacity:0.8;
 }
 @media screen and (max-width:1279px){
     .cover__background{ 
