--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -3,7 +3,7 @@
     background-size:cover;
     background-position: center;
     max-width: 1184px;
-    height:740px;
+    min-height:740px;
     margin:auto;
     display: flex;
     flex-direction: column;
@@ -18,25 +18,25 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0,0,0,.5);
+    background: rgba(0,0,0,.3);
     z-index: 2;
     opacity: 0.3;
 }
 .cover__background:hover:after{
-   opacity:0.8;
+    background: rgba(0,0,0,.8);
 }
 @media screen and (max-width:1279px){
     .cover__background{ 
-        height: 640px;       
+        min-height: 640px;       
     }
 }
 @media screen and (max-width:1023px){
     .cover__background{
-        height:480px;  
+        min-height:480px;  
     }
 }
 @media screen and (max-width:767px){
     .cover__background{
-        height:200px;  
+        min-height:200px;  
     }
 }
