--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,20 +3,11 @@
     line-height: 36px;
     font-weight: 400;
     max-width: 640px;
-    margin:0 0 64px 192px;
+    margin:0 auto 64px auto;
     text-align: center;
 }
-@media screen and (max-width:1279px){
-    .lead__subtitle{
-        margin:0 0 56px 192px;
-    }
-}
-@media screen and (max-width: 1023px) {
-    .lead__subtitle {
-       margin-left: 0;
-    } 
-   }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 767px) {
     .lead__subtitle {
         font-size: 16px;
         line-height: 20px;
