--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,15 +3,11 @@
     line-height: 100px;
     font-weight: 900;
     max-width: 720px;
-    margin: 74px 0 32px 132px;
+    margin: 74px auto 32px auto;
     text-align: center;
 }
-@media screen and (max-width: 1023px) {
-    .lead__title {
-       margin-left: 0;
-    } 
-   }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 767px) {
     .lead__title {
         margin-top:48px;
         margin-bottom:16px;
