--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background:#2A2C2F;
-    padding-left:106px;
+    padding-left:0;
 }
 @media screen and (max-width:1279px){
     .lead{
