--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -2,6 +2,11 @@
     align-self: flex-end;
     margin-left: 40px;
 }
+@media screen and (max-width:1023px){
+    .places__website{
+       margin-left:28px;
+    }
+}
 @media screen and (max-width:767px){
     .places__website{
        display: none;
